--- a/JavaApplicationCalculator/nbproject/private/private.properties
+++ b/JavaApplicationCalculator/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sd\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\root\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
